Fixed images for better performance

--- a/index.html
+++ b/index.html
@@ -235,6 +235,28 @@
           <a href="#" class="btn btn--red">Discover all journeys</a>          
         </div>        
       </section>
+
+      <section class="section-stories">
+        <div class="u-center-text u-margin-bottom-big">
+          <h2 class="heading-secondary">People are living their dreams</h2>
+        </div>
+        <div class="row">
+          <div class="story">
+            <figure class="story__shape">
+              <img class="story__img" src="img/nat-8.jpg" alt="Person 1">
+            </figure>
+            <div class="story__text">
+              <h3 class="heading-tertiary u-margin-bottom-small">
+                This is the best tool to keep you going
+              </h3>
+              <p>
+                Great to feel it! Great to feel it!Great to feel it!Great to feel it!Great to feel it!Great to feel it!Great to feel it!Great to feel it!Great to feel it!Great to feel it!Great to feel it!Great to feel it!Great to feel it!
+              </p>
+            </div>
+          </div>
+        </div>
+
+      </section>
     </main>
 
     <!--
