Added Story Section template

--- a/index.html
+++ b/index.html
@@ -255,7 +255,23 @@
             </div>
           </div>
         </div>
-
+        <div class="row">
+            <div class="story">
+            <figure class="story__shape">
+              <img class="story__img" src="img/nat-9.jpg" alt="Person 1">
+            </figure>
+            <div class="story__text">
+              <h3 class="heading-tertiary u-margin-bottom-small">
+                finally i'm having a real project experience
+              </h3>
+              <p>
+                Great to feel it! Great to feel it!Great to feel it!Great to feel it!Great to feel it!Great to feel it!Great to feel it!Great to feel it!Great to feel it!Great to feel it!Great to feel it!Great to feel it!Great to feel it!
+              </p>
+            </div>
+          </div>
+        </div>
+      
+          
       </section>
     </main>
 
