Added link to Popular Journeys

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                       <p class="card__funding-text">Fund me</p>
                       <p class="card__funding-value">$50</p>
                     </div>
-                    <a href="#" class="btn btn--white">Donate now</a>
+                    <a href="https://www.amazon.com.br/Igreja-Schreberiana-dos-Nervos-Deus-ebook/dp/B08L9QLBNS"  rel="noreferrer noopener" target= "_blank" class="btn btn--white">Donate now</a>
                   </div>
                 </div>  
             </div>
