Added hover effect in figure caption

--- a/index.html
+++ b/index.html
@@ -244,6 +244,9 @@
           <div class="story">
             <figure class="story__shape">
               <img class="story__img" src="img/nat-8.jpg" alt="Person 1">
+              <figcaption class="story__caption">
+                Sally Raymond
+              </figcaption>
             </figure>
             <div class="story__text">
               <h3 class="heading-tertiary u-margin-bottom-small">
@@ -258,7 +261,10 @@
         <div class="row">
             <div class="story">
             <figure class="story__shape">
-              <img class="story__img" src="img/nat-9.jpg" alt="Person 1">
+              <img src="img/nat-9.jpg" alt="Person 1" class="story__img">
+              <figcaption class="story__caption">
+                Harold Smith
+              </figcaption>
             </figure>
             <div class="story__text">
               <h3 class="heading-tertiary u-margin-bottom-small">
