--- a/index.html
+++ b/index.html
@@ -276,6 +276,9 @@
             </div>
           </div>
         </div>
+        <div class="u-center-text u-margin-top-big">
+          <a href="#" class="btn-text">Read about journers &rarr;</a>          
+        </div>
       
           
       </section>
