--- a/index.html
+++ b/index.html
@@ -290,6 +290,15 @@
           <a href="#" class="btn-text">Read about journers &rarr;</a>
         </div>
       </section>
+
+      <section class="section-newsletter">
+        <div class="row">
+          <div class="newsletter">
+            
+          </div>
+        </div>
+      </section>
+
     </main>
 
     <!--
