--- a/index.html
+++ b/index.html
@@ -294,7 +294,21 @@
       <section class="section-newsletter">
         <div class="row">
           <div class="newsletter">
-            
+            <div class="newsletter__form">
+              <div class="u-center-text u-margin-bottom-medium">
+                <h2 class="heading-secondary">Subscribe now</h2>
+              </div>
+              <form action="#" class="form">
+                <div class="form__group">
+                  <input type="text" class="form__input" placeholder="Full Name" id="name" required>
+                  <label for="name" class="form__label">Full name</label>                  
+                </div>
+                <div class="form__group">
+                  <input type="email" class="form__input" placeholder="Email Address" id="email" required>
+                  <label for="email" class="form__label">Email address</label>
+                </div>
+              </form>
+            </div>
           </div>
         </div>
       </section>
