Styling radio buttons from Newsletter

--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
           <div class="newsletter">
             <div class="newsletter__form">
               <div class="u-center-text u-margin-bottom-medium">
-                <h2 class="heading-secondary">Subscribe now</h2>
+                <h2 class="heading-secondary">Our Newsletter</h2>
               </div>
               <form action="#" class="form">
                 <div class="form__group">
@@ -307,6 +307,26 @@
                   <input type="email" class="form__input" placeholder="Email Address" id="email" required>
                   <label for="email" class="form__label">Email address</label>
                 </div>
+                <div class="form__group u-margin-bottom-medium">
+                  <div class="form__radio-group">
+                    <input type="radio" class="form__radio-input" id="news" name="option">
+                    <label for="news" class="form__radio-label">
+                      <span class="form__radio-button"></span> 
+                      Daily
+                    </label>
+                  </div> 
+
+                  <div class="form__radio-group">
+                    <input type="radio" class="form__radio-input" id="newsandjourneys" name="option">
+                    <label for="newsandjourneys" class="form__radio-label">
+                      <span class="form__radio-button"></span>
+                      Weekly
+                    </label>
+                  </div>                  
+                </div>
+                 <div class="form__group">
+                   <button class="btn btn--red">Subscribe</button>
+                 </div>                
               </form>
             </div>
           </div>
