--- a/index.html
+++ b/index.html
@@ -332,8 +332,13 @@
           </div>
         </div>
       </section>
-
     </main>
+
+    <div class="footer">
+      <div style="background-color: grey;" class="footer__logo-container">
+        <img src="img/logo-white.png" alt="Full logo" class="footer__logo">
+      </div>
+    </div>
 
     <!--
     <section class="grid-test">
