--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <span class="heading-primary--main">Journey</span>
           <span class="heading-primary--sub">where your life happens</span>
         </h1>
-        <a href="#" class="btn btn--white btn--animated">Start yours</a>
+        <a href="#" class="btn btn--white btn--animated">Start now</a>
       </div>
     </header>
 
@@ -334,11 +334,29 @@
       </section>
     </main>
 
-    <div class="footer">
-      <div style="background-color: grey;" class="footer__logo-container">
+    <footer class="footer">
+      <div class="footer__logo-container">
         <img src="img/logo-white.png" alt="Full logo" class="footer__logo">
+        <h3><strong>Journey of Life</strong></h3>
       </div>
-    </div>
+      <div class="row">
+        <div class="col-1-of-2">
+          <div class="footer__navigation">
+            <ul class="footer__list">
+              <li class="footer__item"><a href="#" class="footer__link">Company</a></li>
+              <li class="footer__item"><a href="#" class="footer__link">Contact us</a></li>
+              <li class="footer__item"><a href="#" class="footer__link">Carreers</a></li>
+              <li class="footer__item"><a href="#" class="footer__link">Privacy Policy</a></li>
+              <li class="footer__item"><a href="#" class="footer__link">Terms</a></li>
+            </ul>
+          </div>          
+        </div>
+        <div class="col-1-of-2">
+          <p class="footer__copyright">Built by <a href="#" class="footer__link">Journey Team</a>, March, 2021. <a href="#" class="footer__link"> Click for more information</a>. Copyright &copy; Journey Team. Design inspired by Jonas Schmedtmann - our special thanks!
+          </p>
+        </div>
+      </div>
+    </footer>
 
     <!--
     <section class="grid-test">
