Fixed the outline of footer button

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                     <li>book</li>
                     <li>has cover</li>
                     <li>has summary</li>
-                    <li>publishing stage</li>
+                    <li>published</li>
                     <li>has video</li>
                   </ul>
                 </div>
@@ -157,15 +157,15 @@
               <div class="card__side card__side--back card__side--back-orange">
                 <div class="card__cta">
                   <div class="card__funding-container">
-                    <p class="card__funding-text">Fund me</p>
-                    <p class="card__funding-value">$50</p>
+                    <p class="card__funding-text">Buy me</p>
+                    <p class="card__funding-value">$.99</p>
                   </div>
                   <a
-                    href="https://www.amazon.com.br/Igreja-Schreberiana-dos-Nervos-Deus-ebook/dp/B08L9QLBNS"
+                    href="https://www.amazon.com/Igreja-Schreberiana-dos-Nervos-Deus-Portuguese-ebook/dp/B08L9QLBNS"
                     rel="noreferrer noopener"
                     target="_blank"
                     class="btn btn--white"
-                    >Donate now</a
+                    >Buy now</a
                   >
                 </div>
               </div>
@@ -194,7 +194,7 @@
                 <div class="card__cta">
                   <div class="card__funding-container">
                     <p class="card__funding-text">Fund me</p>
-                    <p class="card__funding-value">$30</p>
+                    <p class="card__funding-value">$10</p>
                   </div>
                   <a href="#" class="btn btn--white">Donate now</a>
                 </div>
@@ -224,7 +224,7 @@
                 <div class="card__cta">
                   <div class="card__funding-container">
                     <p class="card__funding-text">Fund me</p>
-                    <p class="card__funding-value">$40</p>
+                    <p class="card__funding-value">$20</p>
                   </div>
                   <a href="#" class="btn btn--white">Donate now</a>
                 </div>
@@ -307,6 +307,7 @@
                   <input type="email" class="form__input" placeholder="Email Address" id="email" required>
                   <label for="email" class="form__label">Email address</label>
                 </div>
+
                 <div class="form__group u-margin-bottom-medium">
                   <div class="form__radio-group">
                     <input type="radio" class="form__radio-input" id="news" name="option">
@@ -315,7 +316,6 @@
                       Daily
                     </label>
                   </div> 
-
                   <div class="form__radio-group">
                     <input type="radio" class="form__radio-input" id="newsandjourneys" name="option">
                     <label for="newsandjourneys" class="form__radio-label">
