--- a/index.html
+++ b/index.html
@@ -16,6 +16,20 @@
     <title>Journey | An exciting path of life</title>
   </head>
   <body>
+    <div class="navigation">
+      <input type="checkbox" class="navigation__checkbox" id= "nav-toggle">
+      <label for="nav-toggle" class="navigation__button">MENU</label>
+      <div class="navigation__background">&nbsp;</div>
+      <nav class="navigation__nav">
+        <ul class="navigation__list">
+          <li class="navigation__item"><a href="#" class="navigation__link">About Journey</a></li>
+          <li class="navigation__item"><a href="#" class="navigation__link">The benfits</a></li>
+          <li class="navigation__item"><a href="#" class="navigation__link">Popular journeys</a></li>
+          <li class="navigation__item"><a href="#" class="navigation__link">Stories</a></li>
+          <li class="navigation__item"><a href="#" class="navigation__link">Start Now</a></li>
+        </ul>
+      </nav>
+    </div>
     <header class="header">
       <div class="header__logo-container">
         <img src="img/logo-white.png" alt="logo" class="header__logo" />
