--- a/index.html
+++ b/index.html
@@ -18,8 +18,10 @@
   <body>
     <div class="navigation">
       <input type="checkbox" class="navigation__checkbox" id= "nav-toggle">
-      <label for="nav-toggle" class="navigation__button">MENU</label>
-      <div class="navigation__background">&nbsp;</div>
+      <label for="nav-toggle" class="navigation__button">
+        <span class="navigation__icon">&nbsp;</span>
+      </label>
+      <div class="navigation__background"></div>
       <nav class="navigation__nav">
         <ul class="navigation__list">
           <li class="navigation__item"><a href="#" class="navigation__link">About Journey</a></li>
