Adding a CSS popup from Journey examples

--- a/index.html
+++ b/index.html
@@ -374,6 +374,29 @@
       </div>
     </footer>
 
+    <div class="popup">
+      <div class="popup__content">        
+          <div class="popup__content--left">              
+                <img src="img/nat-8.jpg" alt="Fund photo 1"/>
+                <img src="img/nat-9.jpg" alt="Fund photo 2"/>              
+          </div>
+          <div class="popup__content--right">                                
+                <h2 class="heading-secondary u-margin-bottom-small">Start funding!</h2>
+                <h3 class="heading-tertiary u-margin-bottom-small">Testimony from this journer:</h3>
+                <div class="popup__text">
+                  <p>"I've finally published my first book in Portuguese, now I'm looking foward to translating it to English and share it with the world!</p>
+                  <p>Even though I know that it is mostly about a mixture of madness and brazilian music, I believe that most people would enjoy to read it.</p>
+                  <p>I chose to start with an e-book 'cause it wouldn't be a problem, since I could do it (cover design, editing, and publishing) all by myself. But now I wish I could publish it on paper too!"</p>
+                </div>
+                
+                <a href="#" class="btn btn--red">Fund me</a>             
+          </div>                      
+        </div> 
+      </div>    
+    
+
+
+
     <!--
     <section class="grid-test">
       <div class="row">
