Fixed red button pseudo-class after

--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
         <div class="row">
           <div class="story">
             <figure class="story__shape">
-              <img src="img/nat-8.jpg" alt="Person 1" class="story__img" />
+              <img src="img/writer.jpg" alt="Person 1" class="story__img" />
               <figcaption class="story__caption">Sally Raymond</figcaption>
             </figure>
             <div class="story__text">
@@ -420,8 +420,8 @@
     <div class="popup" id="popup">
       <div class="popup__content">
         <div class="popup__content--left">
-          <img src="./img/nat-8.jpg" alt="Fund photo 1" />
-          <img src="./img/nat-5.jpg" alt="Fund photo 2" />
+          <img src="./img/writer.jpg" alt="Fund photo 1" />
+          <img src="./img/books.jpg" alt="Fund photo 2" />
         </div>
         <div class="popup__content--right">
           <a href="#section-examples" class="popup__back">&times;</a>
@@ -449,7 +449,7 @@
             </p>
           </div>
 
-          <a href="#" class="btn btn--red u-margin-right-medium">Fund me</a>
+          <a href="https://www.amazon.com/Igreja-Schreberiana-dos-Nervos-Deus-Portuguese-ebook/dp/B08L9QLBNS" target="_blank" class="btn btn--red u-margin-right-medium">Fund me</a>
           <a
             href="https://www.amazon.com/Igreja-Schreberiana-dos-Nervos-Deus-Portuguese-ebook/dp/B08L9QLBNS"
             rel="noreferrer noopener"
