Reconfigured images to fit content

--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
                 <div class="card__cta">
                   <div class="card__funding-container">
                     <p class="card__funding-text">Fund me</p>
-                    <p class="card__funding-value">$15</p>
+                    <p class="card__funding-value">$20</p>
                   </div>
                   <a href="#popup" class="btn btn--white">Donate now</a>
                 </div>
@@ -216,7 +216,7 @@
                 <div class="card__cta">
                   <div class="card__funding-container">
                     <p class="card__funding-text">Fund me</p>
-                    <p class="card__funding-value">$10</p>
+                    <p class="card__funding-value">$40</p>
                   </div>
                   <a href="#popup" class="btn btn--white">Donate now</a>
                 </div>
@@ -246,7 +246,7 @@
                 <div class="card__cta">
                   <div class="card__funding-container">
                     <p class="card__funding-text">Fund me</p>
-                    <p class="card__funding-value">$20</p>
+                    <p class="card__funding-value">$15</p>
                   </div>
                   <a href="#" class="btn btn--white">Donate now</a>
                 </div>
@@ -292,7 +292,7 @@
         <div class="row">
           <div class="story">
             <figure class="story__shape">
-              <img src="img/nat-9.jpg" alt="Person 2" class="story__img" />
+              <img src="img/observer.jpg" alt="Person 2" class="story__img" />
               <figcaption class="story__caption">Harold Smith</figcaption>
             </figure>
             <div class="story__text">
@@ -352,7 +352,7 @@
                     />
                     <label for="news" class="form__radio-label">
                       <span class="form__radio-button"></span>
-                      Daily
+                      Weekly
                     </label>
                   </div>
                   <div class="form__radio-group">
@@ -364,12 +364,15 @@
                     />
                     <label for="newsandjourneys" class="form__radio-label">
                       <span class="form__radio-button"></span>
-                      Weekly
+                      Monthly
                     </label>
                   </div>
                 </div>
                 <div class="form__group">
-                  <button class="btn btn--red">Subscribe</button>
+                  <a 
+                  href="https://mailchi.mp/f02b8bf0cdc3/journeyoflife" 
+                  rel="noreferrer noopener" 
+                  class="btn btn--red">Subscribe</a>
                 </div>
               </form>
             </div>
@@ -449,7 +452,7 @@
             </p>
           </div>
 
-          <a href="https://www.amazon.com/Igreja-Schreberiana-dos-Nervos-Deus-Portuguese-ebook/dp/B08L9QLBNS" target="_blank" class="btn btn--red u-margin-right-medium">Fund me</a>
+          <a href="#" class="btn btn--red u-margin-right-medium">Fund me</a>
           <a
             href="https://www.amazon.com/Igreja-Schreberiana-dos-Nervos-Deus-Portuguese-ebook/dp/B08L9QLBNS"
             rel="noreferrer noopener"
@@ -458,7 +461,7 @@
           >
             Buy e-book
           </a>
-        </div>
+        </div>        
       </div>
     </div>
 
