--- a/index.html
+++ b/index.html
@@ -5,10 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <link
-      href="https://fonts.googleapis.com/css?family=Montserrat:100,300,400, 500,600,700,900"
+      href="https://fonts.googleapis.com/css?family=Montserrat:400, 500,700,900&display=swap"
       rel="stylesheet"
-    />
-    
+    />    
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/icofont.css" />
     <link rel="shortcut icon" type="image/ico" href="img/favicon.ico" />
