--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, X-Content-Type-Options=nosniff"/>
 
     <link
-      href="https://fonts.googleapis.com/css?family=Montserrat:400, 500,700,900&display=swap"
+      href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700,900&display=swap"
       rel="stylesheet"
     />    
     <link rel="stylesheet" href="css/style.css" />
