--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, X-Content-Type-Options=nosniff"/>
+    <meta http-equiv="Content-Security-Policy"
+      content="default-src 'self'; img-src https://*; child-src 'none';">
+
 
     <link
       href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700,900&display=swap"
