Feat: media queries layout adjustment

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <main>
       <section class="section-about">
         <div class="u-center-text u-margin-bottom-big">
-          <h2 class="heading-secondary">A great way to share your paths</h2>
+          <h2 class="heading-secondary">Great ways to share your paths</h2>
         </div>
 
         <div class="row">
@@ -267,7 +267,7 @@
           </video>
         </div>
         <div class="u-center-text u-margin-bottom-big">
-          <h2 class="heading-secondary">People are living their dreams</h2>
+          <h2 class="heading-secondary">People in living dreams</h2>
         </div>
         <div class="row">
           <div class="story">
